fix: resolve network error on multi-device access with auto-detected API URLs
- Removed hardcoded localhost URLs from login.html and signup.html
- Updated app-backend.js to use dynamic API URL detection
- Added config.js helper for API URL configuration
- Updated .env and .env.example with CORS configuration examples
- Added comprehensive documentation (9 files) explaining the fix
- Now works seamlessly on localhost, network IPs, and production domains
- Same code works everywhere with automatic detection
- No breaking changes, fully backward compatible

Fixes: Network error when accessing app from other devices on same network

Documentation:
- README_FIX.md: Main explanation
- QUICK_START.md: 5-minute setup guide
- FIX_CHECKLIST.md: Testing and troubleshooting guide
- DEPLOYMENT.md: Production deployment guide
- ARCHITECTURE.md: Technical diagrams and flow
- And 4 more comprehensive guides

--- a/projects/habit-tracker/.env.example
+++ b/projects/habit-tracker/.env.example
@@ -6,7 +6,7 @@ PORT=3000
 JWT_SECRET=your-secret-key-change-this
 
 # CORS Origins (comma-separated, no spaces)
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000,http://127.0.0.1:3000
 
 # Database Configuration (PostgreSQL)
 DATABASE_URL=postgresql://user:password@localhost:5432/habit_tracker
@@ -14,8 +14,24 @@ DATABASE_URL=postgresql://user:password@localhost:5432/habit_tracker
 # Cookie Security (set to true when using HTTPS in production)
 COOKIE_SECURE=false
 
-# Production Example
+# Frontend API URL Configuration (optional, for explicit control)
+# If not set, frontend will auto-detect based on current domain
+# FRONTEND_API_URL=http://localhost:3000/api
+
+# =============================================================
+# PRODUCTION CONFIGURATION EXAMPLES
+# =============================================================
+
+# For Production with HTTPS:
 # NODE_ENV=production
+# PORT=3000
 # DATABASE_URL=postgresql://username:password@prod-db-host:5432/habit_tracker
-# ALLOWED_ORIGINS=https://yourdomain.com
+# ALLOWED_ORIGINS=https://dikeshmanandhar.com.np,https://yourdomain.com
 # COOKIE_SECURE=true
+# FRONTEND_API_URL=https://api.dikeshmanandhar.com.np/api
+
+# For Vercel/Netlify Deployment:
+# NODE_ENV=production
+# ALLOWED_ORIGINS=https://your-frontend-domain.vercel.app
+# DATABASE_URL=postgresql://...
+# FRONTEND_API_URL=https://your-backend-api.com/api
