--- a/projects/habit-tracker/package.json
+++ b/projects/habit-tracker/package.json
@@ -4,8 +4,8 @@
   "description": "Multi-user habit tracking application with authentication",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server-mongo.js",
+    "dev": "nodemon server-mongo.js"
   },
   "keywords": [
     "habits",
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.11.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.10.1",
     "pg": "^8.17.2"
   },
   "devDependencies": {
